<resources>
    <string name="app_name">Messenger2</string>
    <string name="new_group">New Group</string>
    <string name="contacts">Contacts</string>
    <string name="calls">Calls</string>
    <string name="people_nearby">People Nearby</string>
    <string name="saved_messages">Saved Messages</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="features">Features</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="evgennikolaevich">/@EvgenNikolaevich</string>
    <string name="what_is_your_name">What is your name</string>
    <string name="user_name">Evgeny Minaenkov</string>
    <string name="change_user_name">User Name</string>
</resources>