<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/item_menu_navigation_new_group_chat"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/new_group" />
        <item
            android:id="@+id/item_menu_navigation_contacts"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/contacts" />
        <item
            android:id="@+id/item_menu_navigation_calls"
            android:icon="@drawable/ic_baseline_phone_24"
            android:title="@string/calls" />
        <item
            android:id="@+id/item_menu_navigation_people_nearby"
            android:icon="@drawable/ic_baseline_room_24"
            android:title="@string/people_nearby" />
        <item
            android:id="@+id/item_menu_navigation_saved_messages"
            android:icon="@drawable/ic_baseline_save_24"
            android:title="@string/saved_messages" />
        <item
            android:id="@+id/item_menu_navigation_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>

    <group
        android:id="@+id/group_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/item_menu_navigation_invite_friends"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/invite_friends" />
        <item
            android:id="@+id/item_menu_navigation_features"
            android:icon="@drawable/ic_baseline_check_24"
            android:title="@string/features" />
    </group>
</menu>